--- a/style.css
+++ b/style.css
@@ -137,3 +137,12 @@ nav ul li a:hover {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+section {
+    display: none; /* Esconde todas as seções */
+}
+
+section.active {
+    display: block; /* Mostra apenas a ativa */
+}
+
