--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ section.active {
     width: 50%;
     padding: 20px;
     text-align: right;
+    display: flex;
+    justify-content: center;
 }
 
 /* Intercalar os itens */
@@ -187,6 +189,12 @@ section.active {
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    max-width: 400px; /* Define um limite fixo de largura */
+    min-height: 180px; /* Garante altura mínima para alinhamento */
+    word-wrap: break-word; /* Garante quebra automática de palavras */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .timeline-content h3 {
@@ -194,7 +202,3 @@ section.active {
     margin-bottom: 5px;
 }
 
-.timeline-content h3 {
-    color: #007BFF;
-    margin-bottom: 5px;
-}
