--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    background: #333;
-    color: white;
+    background: rgba(51, 51, 51, 0);
+    color: black;
     padding: 15px 0;
     text-align: center;
 }
