--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ body {
 }
 
 header {
-    background: rgba(51, 51, 51, 0);
-    color: black;
+    background: rgba(51, 51, 51, 0); /* Fundo transparente */
+    color: black; /* Texto preto */
     padding: 15px 0;
     text-align: center;
+    font-size: 18px; /* Tamanho da letra */
 }
 
 nav ul {
