--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ body {
 }
 
 header {
-    background: rgba(51, 51, 51, 10);
+    background: rgba(51, 51, 51, 0); /* Fundo transparente */
+    color: black;
     padding: 15px 0;
     text-align: center;
+    font-size: 24px; /* Tamanho da letra ajustado */
+    text-transform: uppercase; /* Transforma o texto em maiúsculas */
+    font-weight: bold; /* Deixa o texto em negrito */
 }
 
 nav ul {
