--- a/style.css
+++ b/style.css
@@ -6,13 +6,10 @@ body {
 }
 
 header {
-    background: rgba(51, 51, 51, 0); /* Fundo transparente */
+    background: rgba(51, 51, 51, 0);
     color: black;
     padding: 15px 0;
     text-align: center;
-    font-size: 24px; /* Tamanho da letra ajustado */
-    text-transform: uppercase; /* Transforma o texto em maiúsculas */
-    font-weight: bold; /* Deixa o texto em negrito */
 }
 
 nav ul {
@@ -26,7 +23,10 @@ nav ul li {
 }
 
 nav ul li a {
-    color: black; /* Defina a cor preta para os links */
+    color: black;
+    font-size: 24px; /* Tamanho da letra ajustado */
+    text-transform: uppercase; /* Transforma o texto em maiúsculas */
+    font-weight: bold; /* Deixa o texto em negrito */
     text-decoration: none;
 }
 
