--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body {
     line-height: 1.6;
 }
 
+.top-bar {
+  background-color: #f2f2f2;
+  color: #333;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 1px solid #ccc;
+}
+
 header {
     background: #354;
     color: black;
