--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   font-size: 16px;
   font-weight: 500;
   border-bottom: 1px solid #ccc;
+  text-transform: uppercase; 
+  font-weight: bold;
+  text-decoration: none;
 }
 
 header {
