--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    background: linear-gradient(to right, #f4dfd4, #32485c);
     color: black;
     padding: 15px 0;
     text-align: center;
