--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 .top-bar {
-  background-color: #f2f2f2;
-  color: #333;
+  background-color: #263849;
+  color: white;
   padding: 10px 0;
   text-align: center;
   font-size: 16px;
