--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 header {
-    background: linear-gradient(to right, #f4dfd4, #32485c);
+    background: linear-gradient(to top, #f4dfd4, #32485c);
     color: black;
     padding: 15px 0;
     text-align: center;
