--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background: linear-gradient(to top, #f4dfd4, #ffffff);
+    background: linear-gradient(to top, #f4dfd4, #32485c);
 }
 
 .top-bar {
