--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #007bff; /* Cor para quando o link estiver em hover */
+    color: #a47878; /* Cor para quando o link estiver em hover */
 }
 
 .container {
