--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 header {
-    background: linear-gradient(to top, #f1d6d6, #4d2424);
+    background: linear-gradient(to left, #ffffff, #32485c);
     color: black;
     padding: 15px 0;
     text-align: center;
