--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    font-family: Arial, sans-serif;
+Obody {
+    font-family: Poiret One, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -20,7 +20,7 @@ body {
 }
 
 header {
-    background: linear-gradient(to left, #ffffff, #32485c);
+    background: linear-gradient(to top, #ffffff, #32485c);
     color: black;
     padding: 15px 0;
     text-align: center;
