--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-Obody {
-    font-family: Poiret One, sans-serif;
+body {
+    font-family: Cursive, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
