--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Cursive, sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -7,7 +7,7 @@ body {
 }
 
 .top-bar {
-  background-color: white;
+  background-color: #32485c;
   color: white;
   padding: 10px 0;
   text-align: center;
