--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ section.active {
 }
 
 .filter-btn {
-    background-color: #007BFF;
+    background-color: #36384c;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -114,7 +114,7 @@ section.active {
 }
 
 .filter-btn:hover {
-    background-color: #874e4c;
+    background-color: #613a43;
 }
 
 .projects-list {
