--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h2 {
     left: 50%;
     width: 6px;
     height: 100%;
-    background-color: #007bff;
+    background-color: #849974;
     transform: translateX(-50%);
 }
 
