--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h2 {
     background: #fff; /* Fundo branco para destacar */
     padding: 20px; /* Espaçamento interno */
     border-radius: 8px; /* Cantos arredondados */
-    border: 2px solid #007bff; /* Borda azul */
+    border: 2px solid #849974; 
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para destacar */
     font-weight: bold;
     font-size: 16px;
@@ -216,7 +216,7 @@ h2 {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background: #007bff;
+    background: #6f855f;
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
