--- a/style.css
+++ b/style.css
@@ -339,6 +339,8 @@ h2 {
 
 .hover-content {
     display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
     padding-top: 10px;
 }
 
@@ -348,4 +350,5 @@ h2 {
 
 .hover-card:hover .hover-content {
     display: block;
+    opacity: 1;
 }
