--- a/style.css
+++ b/style.css
@@ -348,12 +348,15 @@ h2 {
 .accordion-content {
     padding: 0 15px;
     display: none;
+    opacity: 0;
     background-color: #e2e2e2;
     border-radius: 8px;
+    transition: opacity 0.3s ease;
 }
 
 .accordion-item:hover .accordion-content {
     display: block;
+    opacity: 1;
 }
 
 .accordion-content ul {
