--- a/style.css
+++ b/style.css
@@ -343,8 +343,8 @@ h3 {
 
 .interest-item {
     background-color: #fff;
-    padding: 8px;
-    margin-bottom: 8px;
+    padding: 5px;
+    margin-bottom: 5px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -359,7 +359,7 @@ h3 {
 .interest-item h4 {
     font-size: 18px;
     font-weight: bold;
-    color: #007bff;
+    color: #7b0c35;
 }
 
 .sub-interests {
