--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ h2 {
 /*INTERESTS*/
 #skills-interests {
     margin: 5px 0;
-    padding: 30px;
+    padding: 10px 30px;
     background-color: #f9f9f9;
 }
 
