--- a/style.css
+++ b/style.css
@@ -347,6 +347,8 @@ h2 {
     font-size: 18px;
     cursor: pointer;
     position: relative;
+    color: #2a7ae2;
+    font-weight: bold;
 }
 
 .interest-item {
