--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     gap: 40px;
-    padding: 0 60px; /* Adiciona espaço nas laterais para empurrar os blocos */
+    padding: 0 90px; 
 }
 
 #skills-interests .column.interests {
