--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ h2 {
 }
 
 #skills-interests .column.technical-skills {
-    margin-left: 40px; /* empurra para a direita */
+    margin-left: 10px; 
     margin-right: 0;
 }
 
