--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ h2 {
     font-size: 18px;
     cursor: pointer;
     position: relative;
-    color: #2a7ae2;
+    color: #8f0a0a;
     font-weight: bold;
 }
 
@@ -430,7 +430,7 @@ h2 {
 }
 
 .skill-item p {
-    font-size: 14px;
+    font-size: 16px;
     margin: 0;
     color: #333;
 }
